<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What\'s Open?</string>
    <string name="which_option">I\'m looking for a...</string>
    <string name="action_settings">Settings</string>
    <string name="place_to_eat_button">Place To Eat!</string>
    <string name="search">Search</string>
    <string name="taxi">Taxi Company</string>
    <string name="supermarket">Supermarket</string>
    <string name="petrol_station">Petrol Station</string>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
