<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainOptionsActivity"
    android:background="#33B5E5">

    <TextView android:text="@string/which_option" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionText"
        android:textColor="#0099CC"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40sp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_to_eat_button"
        android:id="@+id/food_toggleButton"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/questionText"
        android:layout_centerHorizontal="true"
        android:textOff="@string/place_to_eat_button"
        android:textOn="@string/place_to_eat_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSearchPress" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi"
        android:id="@+id/taxi_toggleButton"
        android:layout_marginTop="40dp"
        android:textOff="@string/taxi"
        android:textOn="@string/taxi"
        android:layout_below="@+id/food_toggleButton"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petrol_station"
        android:id="@+id/petrol_toggleButton"
        android:layout_marginTop="40dp"
        android:textOff="@string/petrol_station"
        android:textOn="@string/petrol_station"
        android:layout_below="@+id/taxi_toggleButton"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supermarket"
        android:id="@+id/supermarket_toggleButton"
        android:layout_marginTop="40dp"
        android:textOff="@string/supermarket"
        android:textOn="@string/supermarket"
        android:layout_below="@+id/petrol_toggleButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
